@@ -13,6 +13,8 @@ Features added
 Bugs fixed
 ----------
 
+* #3661: sphinx-build crashes on parallel build
+
 Testing
 --------
 
